mostrar los logros
